--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="view">View</string>
     <string name="edit">Update</string>
     <string name="delete">Delete</string>
+    <string name="todo">TODO</string>
 </resources>
